--- a/src/main/resources/templates/productManagement.html
+++ b/src/main/resources/templates/productManagement.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Product Management</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <link rel="stylesheet"
+        href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
 <body>
 <div class="container mt-5">
