--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,10 +2,15 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
   <title>Product Management</title>
-  <link rel="stylesheet" type="text/css" href="/style.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="/static/style.css">
 </head>
 <body>
-<h1>Welcome to Product Management System</h1>
-<a href="/products">Manage Products</a>
+<header>
+</header>
+<div class="container">
+  <h1>Welcome to Product Management System</h1>
+  <a href="/products" class="btn btn-primary">Manage Products</a>
+</div>
 </body>
 </html>
