--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -2,34 +2,40 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
   <title>상품 관리 페이지</title>
-  <link rel="stylesheet" type="text/css" href="/style.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="/static/style.css">
 </head>
 <body>
-<h1>Managing Products</h1>
-<h2>Product List</h2>
-<a href="/products/add">Add New Product</a>
-<table>
-  <thead>
-  <tr>
-    <th>ID</th>
-    <th>Name</th>
-    <th>Price</th>
-    <th>Image URL</th>
-    <th>Actions</th>
-  </tr>
-  </thead>
-  <tbody>
-  <tr th:each="product : ${products}">
-    <td th:text="${product.id}">1</td>
-    <td th:text="${product.name}">Product Name</td>
-    <td th:text="${product.price}">1000</td>
-    <td><img th:src="${product.imageUrl}" alt="Product Image" width="100"></td>
-    <td>
-      <a th:href="@{/products/edit/{id}(id=${product.id})}">Edit</a>
-      <a th:href="@{/products/delete/{id}(id=${product.id})}" onclick="return confirm('정말로 삭제하시겠습니까?');">Delete</a>
-    </td>
-  </tr>
-  </tbody>
-</table>
+<header>
+</header>
+<div class="container">
+  <h1>Product List</h1>
+  <a href="/products/add" class="btn btn-primary mb-3">Add New Product</a>
+  <div class="table-container">
+    <table class="table table-bordered">
+      <thead class="thead-light">
+      <tr>
+        <th>ID</th>
+        <th>Name</th>
+        <th>Price</th>
+        <th>Image</th>
+        <th>Actions</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr th:each="product : ${products}">
+        <td th:text="${product.id}">1</td>
+        <td th:text="${product.name}">Product Name</td>
+        <td th:text="${product.price}">1000</td>
+        <td><img th:src="${product.imageUrl}" alt="Product Image" width="40" height="40"></td>
+        <td>
+          <a th:href="@{/products/edit/{id}(id=${product.id})}" class="btn btn-warning btn-sm">Edit</a>
+          <a th:href="@{/products/delete/{id}(id=${product.id})}" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this product?');">Delete</a>
+        </td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
 </body>
 </html>
