--- a/src/main/resources/templates/product-add-form.html
+++ b/src/main/resources/templates/product-add-form.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <title>Admin Product Form</title>
+  <title>Product Add Form</title>
 </head>
 <body>
   <h1>Add New Product</h1>
