--- a/src/main/resources/templates/product_edit.html
+++ b/src/main/resources/templates/product_edit.html
@@ -13,7 +13,7 @@
     </div>
     <div>
         <label for="price">Price:</label>
-        <input type="number" id="price" th:placeholder="${product.price}" step="0.01">
+        <input type="number" id="price" th:placeholder="${product.price}"/>
     </div>
     <div>
         <label for="imageUrl">Image URL:</label>
@@ -26,9 +26,9 @@
 <script type="text/javascript">
 
     function fetch_product(productId) {
-        const name = document.getElementById("name").value;
-        const price = document.getElementById("price").value;
-        const imageUrl = document.getElementById("imageUrl").value;
+        const name = document.getElementById("name").value || null;
+        const price = document.getElementById("price").value || null;
+        const imageUrl = document.getElementById("imageUrl").value || null;
 
         const body_data = JSON.stringify({
             name,
