--- a/src/main/resources/templates/product-edit-form.html
+++ b/src/main/resources/templates/product-edit-form.html
@@ -9,19 +9,19 @@
     <input type="hidden"/>
     <div>
       <label for="id">ID</label>
-      <input type="number" id="id" required/>
+      <input type="number" id="id" th:value="${product.id}" required/>
     </div>
     <div>
       <label for="name">Name</label>
-      <input type="text" id="name" required/>
+      <input type="text" id="name" th:value="${product.name}" required/>
     </div>
     <div>
       <label for="price">Price</label>
-      <input type="number" id="price" required/>
+      <input type="number" id="price" th:value="${product.price}" required/>
     </div>
     <div>
       <label for="imageUrl">Image URL</label>
-      <input type="text" id="imageUrl" required/>
+      <input type="text" id="imageUrl" th:value="${product.imageUrl}" required/>
     </div>
     <div>
       <button type="submit">Edit</button>
