--- a/src/main/resources/templates/admin-product-list.html
+++ b/src/main/resources/templates/admin-product-list.html
@@ -3,32 +3,44 @@
 <head>
   <meta charset="UTF-8">
   <title>Admin</title>
+  <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-  <h1>Products</h1>
-  <a th:href="@{/admin/add}">Add</a>
-  <table>
-    <thead>
+<div class="container">
+  <div class="table-wrapper">
+    <div class="table-title">
+      <div class="row">
+        <div class="col-sm-6">
+          <h2>Products <a th:href="@{/admin/add}">Add</a></h2>
+        </div>
+      </div>
+    </div>
+    <table class="table table-striped table-hover">
+      <thead>
       <tr>
         <th>ID</th>
         <th>Name</th>
         <th>Price</th>
         <th>Image</th>
-        <th>-</th>
+        <th>Actions</th>
       </tr>
-    </thead>
-    <tbody>
+      </thead>
+      <tbody>
       <tr th:each="product : ${productList}">
         <td th:text="${product.id}"></td>
         <td th:text="${product.name}"></td>
         <td th:text="${product.price}"></td>
-        <td><img th:src="${product.imageUrl()}" alt="img"></td>
+        <td><img th:src="${product.imageUrl}" alt="img" width="100px"></td>
         <td>
-          <a th:href="@{/admin/edit/{id}(id=${product}.id)}">Edit</a>
-          <a th:href="@{/admin/delete/{id}(id=${product}.id)}">Delete</a>
+          <form>
+            <button type="button" th:onclick="|location.href='@{/admin/edit/{id}(id=${product.id})}'|">Edit</button>
+            <button type="button" th:onclick="|location.href='@{/admin/delete/{id}(id=${product.id})}'|">Delete</button>
+          </form>
         </td>
       </tr>
-    </tbody>
-  </table>
+      </tbody>
+    </table>
+  </div>
+</div>
 </body>
 </html>
