--- a/src/main/resources/templates/modify_form.html
+++ b/src/main/resources/templates/modify_form.html
@@ -33,6 +33,13 @@
             margin-bottom: 20px;
             font-weight: bold;
         }
+        .btn-container {
+            display: flex;
+            gap: 10px;
+        }
+        .btn-container .btn {
+            flex: 1;
+        }
     </style>
 </head>
 <body>
@@ -44,17 +51,20 @@
             <input type="hidden" name="_method" value="put">
             <div class="form-group">
                 <label for="name" class="form-label">상품명</label>
-                <input type="text" name="name" id="name" class="form-control" >
+                <input type="text" name="name" id="name" class="form-control">
             </div>
             <div class="form-group">
                 <label for="price" class="form-label">가격</label>
-                <input type="number" name="price" id="price" class="form-control" >
+                <input type="number" name="price" id="price" class="form-control">
             </div>
             <div class="form-group">
                 <label for="imageUrl" class="form-label">이미지 URL</label>
                 <input type="text" name="imageUrl" id="imageUrl" class="form-control">
             </div>
-            <input type="submit" value="수정하기" class="btn btn-primary btn-submit">
+            <div class="btn-container">
+                <input type="submit" value="수정하기" class="btn btn-primary">
+                <a th:href="@{/admin}" class="btn btn-secondary">메인으로</a>
+            </div>
         </form>
     </div>
 </div>
