--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -4,6 +4,7 @@ body {
     padding: 0;
     background-color: #f4f4f4;
 }
+
 .container {
     width: 80%;
     margin: 50px auto;
@@ -12,6 +13,7 @@ body {
     border-radius: 8px;
     overflow: hidden;
 }
+
 .header {
     background: #2c3e50;
     color: #fff;
@@ -19,17 +21,22 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    border-bottom: 1px solid black;
 }
+
 .header h1 {
     margin: 0;
     padding-left: 20px;
 }
+
 .header h1 span {
     font-weight: normal;
 }
+
 .button-container {
     display: flex;
 }
+
 .button-container button {
     margin-left: 10px;
     padding: 10px 20px;
@@ -38,40 +45,34 @@ body {
     color: #fff;
     cursor: pointer;
 }
+
 .button-container .add-btn {
     background: #27ae60;
 }
+
 .button-container .delete-btn {
     background: #e74c3c;
 }
+
 table {
     width: 100%;
     border-collapse: collapse;
 }
+
 table thead {
     background: #2c3e50;
     color: #fff;
 }
+
+.table-header {
+    border-bottom: 2px solid white;
+}
+
 table th, table td {
     padding: 15px;
     text-align: left;
 }
+
 table tbody tr:nth-child(even) {
     background: #f4f4f4;
-}
-.pagination {
-    display: flex;
-    justify-content: center;
-    padding: 20px 0;
-}
-.pagination a {
-    margin: 0 5px;
-    padding: 10px 15px;
-    border: 1px solid #ccc;
-    color: #333;
-    text-decoration: none;
-}
-.pagination a.active {
-    background: #2c3e50;
-    color: #fff;
 }
