fix: 경로 수정 데이터베이스를 사용하기 위해 지정한 경로로 요청을 전송하도록 수정하였다.

--- a/src/main/resources/templates/fragments/addProduct.html
+++ b/src/main/resources/templates/fragments/addProduct.html
@@ -9,7 +9,7 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <form th:action="@{/pinkbeen/products}" method="post">
+                    <form th:action="@{/yeti/products}" method="post">
                         <div class="form-group">
                             <label for="id">ID:</label>
                             <input type="number" id="id" name="id" class="form-control" required>
