style: apply styling on product add page using CSS

--- a/src/main/resources/templates/product_add.html
+++ b/src/main/resources/templates/product_add.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Product Add Page</title>
+    <link rel="stylesheet" th:href="@{/css/product_add.css}">
 </head>
 <body>
 <h1>Add Product</h1>
