--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -4,23 +4,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Product</title>
+    <title>Product Information</title>
+    <link href="/css/main.css" rel="stylesheet" />
 </head>
 <body>
-    <img th:src="@{${product.imageUrl}}" alt="no image" class="product-img"/>
-    <table class="product-info">
-        <tr>
-            <th>ID</th>
-            <td th:text="${product.id}"></td>
-        </tr>
-        <tr>
-            <th>Name</th>
-            <td th:text="${product.name}"></td>
-        </tr>
-        <tr>
-            <th>Price</th>
-            <td th:text="${product.price}"></td>
-        </tr>
-    </table>
+    <div class="header">
+        <span class="title">Product Information</span>
+        <a th:href="@{/admin/products}">
+            <button class="btn primary-btn">Back</button>
+        </a>
+    </div>
+    <div class="container">
+        <img th:src="@{${product.imageUrl}}" alt="no image" class="product-img"/>
+        <table class="product-info">
+            <tr>
+                <th>ID</th>
+                <td th:text="${product.id}"></td>
+            </tr>
+            <tr>
+                <th>Name</th>
+                <td th:text="${product.name}"></td>
+            </tr>
+            <tr>
+                <th>Price</th>
+                <td th:text="${product.price}"></td>
+            </tr>
+        </table>
+    </div>
 </body>
 </html>
