--- a/src/main/resources/templates/product/list.html
+++ b/src/main/resources/templates/product/list.html
@@ -18,13 +18,13 @@
         <td th:text="${product.price}">Price</td>
         <td>
             <a th:href="@{/products/{id}(id=${product.id})}">Detail</a>
-            <a th:href="@{/products/{id}/edit(id=${product.id})}">Edit</a>
+            <a th:href="@{/products/{id}/update(id=${product.id})}">Edit</a>
             <form th:action="@{/products/{id}/delete(id=${product.id})}" method="post" style="display:inline;">
                 <button type="submit">Delete</button>
             </form>
         </td>
     </tr>
 </table>
-<a th:href="@{/products/new}">Add New Product</a>
+<a th:href="@{/products/create}">Add New Product</a>
 </body>
 </html>
