style: apply styling on product edit page

--- a/src/main/resources/templates/product_edit.html
+++ b/src/main/resources/templates/product_edit.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Product Edit Page</title>
+    <link rel="stylesheet" th:href="@{/css/product_edit.css}">
 </head>
 <body>
 <h1>Edit Product</h1>
