--- a/src/main/resources/templates/editform.html
+++ b/src/main/resources/templates/editform.html
@@ -2,11 +2,32 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <style>
+        button {
+            top:50%;
+            background-color:#0a0a23;
+            color: #fff;
+            border:none;
+            border-radius:10px;
+            padding:10px;
+            min-height:15px;
+            min-width: 90px;
+            margin-top: 5px
+        }
+
+        div{
+            margin-top: 5px;
+            margin-bottom: 5px
+        }
+    </style>
     <title>Edit Form</title>
 </head>
 <body>
-
 <h1>Edit</h1>
+<form th:action="@{/api/getAllProducts}" method="get" style="display: inline;">
+    <button type="submit">Back To List</button>
+</form>
+<div>
 product ID: <span th:text="${product.id}"></span>
 <form th:action="@{/api/updateProduct/{id}(id=${product.id})}" method="post">
     name: <input type="text" id="name" name="name" value=""><br>
@@ -14,8 +35,6 @@ product ID: <span th:text="${product.id}"></span>
     imageUrl: <input type="text" id="imageUrl" name="imageUrl" value=""><br>
     <button type="submit">Edit Product</button>
 </form>
-<form th:action="@{/api/getAllProducts}" method="get" style="display: inline;">
-    <button type="submit">Back To List</button>
-</form>
+</div>
 </body>
 </html>
