--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -3,13 +3,38 @@
 <head>
   <meta charset="UTF-8">
   <link th:href="@{/css/admin/index.css}" rel="stylesheet"/>
+  <script defer th:src="@{/js/admin/index.js}"></script>
   <title>상품 관리자 화면</title>
 </head>
 <body>
+<div class="new_product modal">
+  <div class="modal_popup">
+    <h3>새로운 상품 등록</h3>
+    <form action="/api/products" method="post" id="new_product_form">
+      <div>
+        <label for="name">상품명</label>
+        <input type="text" id="name" name="name">
+      </div>
+      <div>
+        <label for="price">가격</label>
+        <input type="text" id="price" name="price">
+      </div>
+      <div>
+        <label for="imageUrl">이미지 URL</label>
+        <input type="text" id="imageUrl" name="imageUrl">
+      </div>
+      <div class="modal_btn_container">
+        <button type="submit" class="modal_btn" th:onclick="">제출</button>
+        <button type="reset" class="modal_btn close_btn">닫기</button>
+      </div>
+    </form>
+  </div>
+</div>
 <header>
   <h2>Manage Products</h2>
   <div>
-    <a href="#">Delete</a> <a href="#">Add New Product</a>
+    <button class="delete_product_modal_bnt">선택한 상품 삭제</button>
+    <button class="new_product_modal_btn">상품 추가</button>
   </div>
 </header>
 <div class="table_wrapper">
