chore(templates): API 엔드포인트 간소화
- /api/products/ 에서 / 로 변경
- /api/products/add/form 에서 /product/add/form으로 변경
- /api/products/add에서 /product/add로 변경
- update, delete도 동일하게 변경

--- a/src/main/resources/templates/addproductform.html
+++ b/src/main/resources/templates/addproductform.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1>Add New Product</h1>
-<form action="#" th:action="@{/api/products/add}" th:object="${productDto}" method="post">
+<form action="#" th:action="@{/product/add}" th:object="${productDto}" method="post">
   <div>
     <label for="id">ID:</label>
     <input type="text" id="id" th:field="*{id}" placeholder="Enter product ID" />
