--- a/src/main/resources/templates/deleteproduct.html
+++ b/src/main/resources/templates/deleteproduct.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1>Delete Product</h1>
-<form th:action="@{/api/products/delete}" th:object="${productDto}" method="get">
+<form th:action="@{/product/delete}" th:object="${productDto}" method="get">
   <!-- Thymeleaf의 hidden 필드를 사용하여 Delete 메서드로 오버라이딩 -->
   <input type="hidden" name="_method" value="delete"/>
 
