--- a/src/main/resources/templates/getproducts.html
+++ b/src/main/resources/templates/getproducts.html
@@ -1,55 +1,18 @@
-<!--<!DOCTYPE HTML>-->
-<!--<html xmlns:th="http://www.thymeleaf.org">-->
-<!--<head>-->
-<!--  <title>Products</title>-->
-<!--  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>-->
-<!--  <link rel="stylesheet" th:href="@{/css/get-products.css}">-->
-<!--</head>-->
-<!--<body>-->
-<!--<div th:if="${not #lists.isEmpty(productDto)}">-->
-<!--  <ul>-->
-<!--    <li th:each="product : ${productDto}">-->
-<!--      <span th:text="${product.id}">Id</span>-->
-<!--      <span th:text="${product.name}">Product Name</span>-->
-<!--      <span th:text="${product.price}">Price</span>-->
-<!--      <span th:text="${product.imageUrl}">imageUrl</span>-->
-<!--    </li>-->
-<!--  </ul>-->
-<!--</div>-->
-<!--<div th:if="${#lists.isEmpty(productDto)}" class="empty-message">-->
-<!--  No products available.-->
-<!--</div>-->
-<!--<div class="actions">-->
-<!--  <ul>-->
-<!--    <li><a href="products/add/form">상품 추가</a></li>-->
-<!--    <li>-->
-<!--      <a href="products/update/form">상품 수정</a>-->
-<!--    </li>-->
-<!--    <li>-->
-<!--      <a href="products/delete/form">상품 삭제</a>-->
-<!--    </li>-->
-<!--  </ul>-->
-
-<!--</div>-->
-<!--</body>-->
-<!--</html>-->
-
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
   <title>Products</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <link rel="stylesheet" th:href="@{/css/get-products.css}">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
 <h1>Product List</h1>
 
 <div class="actions">
   <div class="actions">
-  <a href="products/add/form" class="btn add-btn"> Add Product</a>
-    <a href="products/delete/form" class="btn delete-btn">Delete Product</a>
-    <a href="products/update/form" class="btn update-btn">Update Product</a>
+  <a href="product/add/form" class="btn add-btn"> Add Product</a>
+    <a href="product/delete/form" class="btn delete-btn">Delete Product</a>
+    <a href="product/update/form" class="btn update-btn">Update Product</a>
   </div>
 
 <div th:if="${not #lists.isEmpty(productDto)}">
