--- a/src/main/resources/templates/products_list.html
+++ b/src/main/resources/templates/products_list.html
@@ -8,7 +8,8 @@
     <div class="container">
       <div>
         <h1><a href="/products">상품 관리 시스템</a></h1>
-        <a href="/products/new">상품 추가 버튼</a>
+        <a href="/products/search">상품 검색</a>
+        <a href="/products/new">상품 추가</a>
         <table border ="1" width="50%" height=200 bordercolor="black">
           <thead>
             <tr>
