--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -18,13 +18,13 @@
   </thead>
   <tbody>
   <tr th:each="product : ${products}">
-    <td th:text="${product.value.id()}"></td>
-    <td th:text="${product.value.name()}"></td>
-    <td th:text="${product.value.price()}"></td>
-    <td th:text="${product.value.imageUrl()}"></td>
+    <td th:text="${product.id()}"></td>
+    <td th:text="${product.name()}"></td>
+    <td th:text="${product.price()}"></td>
+    <td th:text="${product.imageUrl()}"></td>
     <td>
-      <a th:href="@{/admin/products/edit/{id}(id=${product.value.id()})}">Edit</a>
-      <form th:action="@{/admin/products/delete/{id}(id=${product.value.id()})}" method="post" style="display:inline;">
+      <a th:href="@{/admin/products/edit/{id}(id=${product.id()})}">Edit</a>
+      <form th:action="@{/admin/products/delete/{id}(id=${product.id()})}" method="post" style="display:inline;">
         <button type="submit">Delete</button>
       </form>
     </td>
