refactor(new product): 저장 후 리디렉션을 위한 리팩토링
view controller endpoint 수정 및 기능 변경

--- a/src/main/resources/templates/product_add_form.html
+++ b/src/main/resources/templates/product_add_form.html
@@ -5,8 +5,7 @@
   <title>상품 추가</title>
 </head>
 <body>
-  <form th:action="@{/api/products}" th:object="${product}" method="post">
-    <input type="hidden" id="create" name="_method" value="create" />
+  <form th:action="@{/products/new}" th:object="${product}" method="post">
     <div>
       <label>ID: </label>
       <input type="text" th:field="*{id}" />
