--- a/src/main/resources/templates/product_list.html
+++ b/src/main/resources/templates/product_list.html
@@ -5,7 +5,7 @@
     <title>상품 리스트</title>
 </head>
 <body>
-<a th:href="@{/product/new}">New</a>
+<a th:href="@{/products/new}">New</a>
 <table border="1">
     <thead>
     <tr>
@@ -33,8 +33,8 @@
         <td class="productPrice">12345</td>
         <td class="productImageURL">imageURL example</td>
         <td>
-            <button type="button" th:href="@{/products/edit/{id}(id=product.id)}">Edit</button>
-            <!-- 삭제 버튼 추가 예정 -->
+            <button type="button">Edit</button>
+            <button type="button">Delete</button>
         </td>
     </tr>
     <tr>
